Remove ResultStore and ResultsProvider