@@ -2,15 +2,14 @@ package ch.jalu.wordeval.evaluators.impl;
 
 import ch.jalu.wordeval.dictionary.Word;
 import ch.jalu.wordeval.evaluators.PostEvaluator;
-import ch.jalu.wordeval.evaluators.processing.ResultStore;
-import ch.jalu.wordeval.evaluators.processing.ResultsProvider;
+import ch.jalu.wordeval.evaluators.processing.AllWordsEvaluatorProvider;
 import ch.jalu.wordeval.evaluators.result.WordGroupWithKey;
 import ch.jalu.wordeval.evaluators.result.WordWithKey;
 import ch.jalu.wordeval.language.Language;
 import ch.jalu.wordeval.language.LetterType;
 import com.google.common.collect.ArrayListMultimap;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ListMultimap;
+import lombok.Getter;
 
 import java.util.ArrayList;
 import java.util.Comparator;
@@ -25,6 +24,7 @@ import java.util.stream.Collectors;
 public class AllVowelsAlphabetically implements PostEvaluator<WordGroupWithKey> {
 
   private final List<String> vowels;
+  @Getter
   private final List<WordGroupWithKey> results = new ArrayList<>();
 
   public AllVowelsAlphabetically(Language language) {
@@ -32,19 +32,18 @@ public class AllVowelsAlphabetically implements PostEvaluator<WordGroupWithKey> 
   }
 
   @Override
-  public void evaluateAndSaveResults(ResultsProvider resultsProvider, ResultStore<WordGroupWithKey> resultStore) {
-    ImmutableList<WordWithKey> vowelCountResults =
-      resultsProvider.getResultsOfEvaluatorOfType(VowelCount.class, vc -> vc.getLetterType() == LetterType.VOWELS);
+  public void evaluate(AllWordsEvaluatorProvider allWordsEvaluatorProvider) {
+    VowelCount vowelCount  =
+        allWordsEvaluatorProvider.getEvaluator(VowelCount.class, vc -> vc.getLetterType() == LetterType.VOWELS);
 
-    List<WordGroupWithKey> wordGroupsByKey = vowelCountResults.stream()
-      .filter(entry -> hasVowelsAlphabetically(entry.getWord().getWithoutAccents()))
-      .collect(Collectors.groupingBy(WordWithKey::getKey,
-        Collectors.mapping(WordWithKey::getWord, Collectors.toSet())))
-      .entrySet().stream()
-      .map(e -> new WordGroupWithKey(e.getValue(), e.getKey()))
-      .collect(Collectors.toList());
+    List<WordGroupWithKey> wordGroupsByKey = vowelCount.getResults().stream()
+        .filter(entry -> hasVowelsAlphabetically(entry.getWord().getWithoutAccents()))
+        .collect(Collectors.groupingBy(WordWithKey::getKey,
+            Collectors.mapping(WordWithKey::getWord, Collectors.toSet())))
+        .entrySet().stream()
+        .map(e -> new WordGroupWithKey(e.getValue(), e.getKey()))
+        .toList();
 
-    resultStore.addResults(wordGroupsByKey);
     results.addAll(wordGroupsByKey);
   }
 
